# process-dispatcher

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  docker-compose.yml  local.process_dispatcher.session.sql
crates/dispatcher/: Cargo.toml  Makefile  README.md
crates/dispatcher/db/migrations/: 20241013131323_dispatcher_process.down.sql
crates/dispatcher/db/mvp_migrations/: 20241020151611_sources.up.sql
crates/dispatcher/db/other_scripts/: create_database.sql  create_mvp_sources_table.sql  insert_mvp_sources.sql
crates/dispatcher/ops/docker/: dispatcher.coding.Dockerfile  entrypoint.sh
crates/dispatcher/src/: cancellation_ext.rs  db_repository.rs  dispatcher.rs  env.rs  http_server.rs  lib.rs
crates/dispatcher/src/dispatcher/: error.rs
crates/dispatcher/src/http_server/: route_handlers.rs
crates/shared/: Cargo.toml  README.md
crates/shared/src/: lib.rs
crates/supervisor/: Cargo.toml  Makefile  README.md
crates/supervisor/ops/docker/: k8s.supervisor.base.Dockerfile  supervisor.Dockerfile  supervisor.coding.Dockerfile
crates/supervisor/src/: dispatcher.rs  env.rs  lib.rs  supervisor.rs
crates/supervisor/src/k8s/: k8s_common.rs  k8s_supervisor.rs
crates/supervisor/src/server/: http.rs
crates/supervisor/src/server/http/: http_routes.rs  http_server.rs
db/migrations/: 20241013131323_dispatcher_process.up.sql
db/mvp_migrations/: 20241020151611_sources.up.sql
ops/: create_dispatcher_processes_table.sql  create_mvp_sources_table.sql  insert_mvp_sources.sql
ops/docker/: process-dispatcher.Dockerfile
src/: async_keyed_mutex.rs  cancellation_ext.rs  db_repository.rs  dispatcher.rs  http_server.rs  lib.rs  main.rs  responses.rs
src/dispatcher/: error.rs
